--- a/style.css
+++ b/style.css
@@ -1,98 +1,141 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    margin: 0;
 }
-
-#logo1 {
-    background-color: #21303E;
-    height: 40px;
+img{
+    max-width: 100%;
+    height: auto;
 }
-
-nav {
-    background-color: #36485A;
-    color: white;
-    padding-left: 20px;
-}
-
-nav li{
-    display: inline-block;
-    padding: 5px;
-}
-
-main {
- background-color: #EAEDEE;
-}
-
-main div:nth-child(1) {
-    background-color:#F56500 ;
-    text-align: center;
-    color: white;
-    margin: 15px;
-    padding: 10px;
-    height: 20px;
-}
-
-h1 {
-    font-size: x-large;
-}
-
-main div:nth-child(2){
-    background-image: url(./assets/bg-image.png);
-    background-size: cover;
-    text-align: center;
-    color: white;
-    width: 90%;
-    height: 120px;
-    margin: 15 px;
-}
-
-main div:nth-child(3){
-    background-color: white;
-    text-align: center;
-    color: white;
-    margin: 30 px;
-    display: inline-block;
-}
-
-.picInline {
-    float: left;
-    width: 20%;
-    margin: 10px;
-    border-radius: 5px;
-    box-shadow: gray;
-}
-
-.blackp {
-    color: black;
-}
-
-.maindiv {
-    text-align: center;
-    margin: 10px;
-    width: 80%;
-    height: 200px;
-    margin: 15px;
-}
-
-.link {
+a{
+    color: #4395a3;
+    font-weight: bold;
     text-decoration: none;
-    color: #4EA5A9;
 }
-
-#linktotop {
-    background-color: #36485A;
-    color: white;
+.logo-container, footer{
+    background-color: #222f3e;
+}
+.logo-container img, footer img{
+    width: 180px;
+}
+.menu-container, .pre_footer{
+    background-color: #354758;
+}
+.menu-container ul{
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+   
+}
+.menu-container ul li{
+    margin-right: 1rem;
+    display: inline-block;
+}
+nav a{
+    color: #ffffff;
+    font-weight: 400;
+}
+main{
+    padding: 2rem 0;
+    background-color: #eaeded;
+}
+.container{
+    width: 90%;
+    margin: auto;
+    padding: 0.5rem 0;
+}
+.promo{
     text-align: center;
-    padding: 5px;
+    color: #ffffff;
+    background-color: #f56600;
 }
-
-#linktotop a{
-    color: white;
+.promo p{
+    margin: 0;
 }
-
-footer{
-    background-color: #21303E;
+.hero{
+    margin: 2rem 0;
+}
+.hero .container{
+    background-image: url(/assets/bg-image.png);
+    background-position: center center;
+    background-repeat: repeat-y;
+    background-size: contain;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    min-height: 20vh;
+    color: #ffffff;
+}
+.hero .caption h1{
+    margin-top: 3rem;
+    font-size: 2rem
+}
+.product .container{
+    background-color: #ffffff;
+}
+.product .container:nth-of-type(2){
+    background-color: #ffffff;
+    min-height: 30vh;
+}
+.product .container .item{
+    width: 22%;
+    min-height: 30vh;
+    margin: 10px;
+    border-radius: 1rem;
+    display: inline-block;
+    float: left;
+}
+.product .container .title h2, .product .container .title a{
+    margin: 0 1rem;
+    display: inline-block;
+}
+.title h2{
+    margin-right: 1rem;
+    margin-bottom: 0;
+}
+.product .container .item{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+}
+.product .container .item:nth-child(1){
+    background-image: url(/assets/img_1.jpg);
+}
+.product .container .item:nth-child(2){
+    background-image: url(/assets/img_2.jpg);
+}
+.product .container .item:nth-child(3){
+    background-image: url(/assets/img_3.jpg);
+}
+.product .container .item:nth-child(4){
+    background-image: url(/assets/img_4.jpg);
+}
+section{
+    margin-bottom: 1rem;
+}
+.cta_1 .container .title h2,
+.cta_2 .container .title h2,
+.cta_1 .container .title a,
+.cta_2 .container .title a{
+    display: inline-block;
+    margin: 0 1rem;
+}
+.cta_1 .container .title,
+.cta_2 .container .title{
+    text-align: center;
+}
+.cta_1 .title h2, .cta_2 .title h2{
+    margin-top: 0;
+}
+.pre_footer{
+    text-align: center;
+    padding: 0.5rem 0;
+}
+footer a{
+    color: #ffffff;
+    text-decoration: underline;
+}
+footer .container{
+    text-align: center;
+    padding: 30px 0;
 }
 
